# thunar

./: .gitignore  configure.ac.in
debian/: .gitignore  changelog  control  rules  thunar-data.install  thunar.install
debian/patches/: 02_handle-folder-change-events-with-file-info-synchronization.patch
docs/: Makefile.am
plugins/thunar-tpa/: Makefile.am
thunar/: Makefile.am  main.c  thunar-file.c
thunarx/: Makefile.am  thunarx-property-page.c  thunarx-provider-factory.c
